# QUIZIT

project/: pyproject.toml  requirements.txt
project/singin/: add_questions.py  db.sqlite3  manage.py  procfile.txt  pyproject.sh  requirements.txt
project/singin/Users/: admin.py  forms.py  models.py  urls.py  views.py
project/singin/Users/migrations/: 0001_initial.py  0002_alter_useranswer_unique_together.py  0003_alter_useranswer_options.py
project/singin/Users/templates/Users/: dashboard.html  home.html  leaderboard.html  login.html  quiz.html  register.html  results.html
project/singin/singin/: asgi.py  settings.py  urls.py  wsgi.py
