[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "quizit"
version = "0.1.0"
description = "Django Quiz Application"

[tool.poetry.dependencies]
python = "^3.8"
Django = "5.2.8"
gunicorn = "23.9.0"
psycopg2-binary = "2.9.11"
whitenoise = "6.6.0"

[tool.poetry.scripts]
